[package]
name = "iced_gif"
version = "0.14.0-dev"
edition = "2021"
authors = ["tarkah <admin@tarkah.dev>"]
description = "A GIF widget for Iced"
license = "MIT"
repository = "https://github.com/tarkah/iced_gif"

[workspace]
default-members = [
  "./example"
]
members = [
  ".",
  "./example",
]

[features]
default = ["async-fs", "networking"]
tokio = ["dep:tokio"]
networking = ["dep:reqwest"]

[dependencies]
iced_widget = { version = "0.14.0-dev",  features = ["image"] }
iced_futures = "0.14.0-dev"
reqwest = { version = "0.12", optional = true }
thiserror = "2.0"

[dependencies.async-fs]
version = "2"
optional = true

[dependencies.tokio]
version = "1"
optional = true
features = ["fs", "io-util"]

[dependencies.image_rs]
package = "image"
version = "0.25"
features = ["gif"]

[patch.crates-io]
iced_widget = { git = "https://github.com/iced-rs/iced.git", rev = "e867f44" }
iced_futures = { git = "https://github.com/iced-rs/iced.git", rev = "e867f44" }
