[package]
name = "example"
version = "0.1.0"
edition = "2021"
authors = ["tarkah <admin@tarkah.dev>"]

[features]
default = ["iced_gif/default"]
tokio = ["iced_gif/tokio", "iced/tokio"]

[dependencies]
iced_gif = { path = "../", default-features = false, features = ["networking"] }
iced = { version = "0.14.0-dev", git = "https://github.com/iced-rs/iced.git", rev = "e867f44", features = ["advanced", "image", "tokio"] }
reqwest = "0.12.19"

